--- a/pages/static/pages/app.css
+++ b/pages/static/pages/app.css
@@ -10,4 +10,37 @@
     color: #582f0a; /* Cambia el color */
 }
 
+.principal_image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+.image_home{
+    max-width: 100%;
+    height: auto;
+}
+
+.options {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente si es necesario */
+    gap: 20px; /* Espacio entre imágenes */
+    height: 100vh; /* O ajusta según necesidad */
+}
+.image_option {
+    width: 500px; /* Ajusta el tamaño según necesidad */
+    height: auto;
+}
+
+.button_{
+    width: 500px;  /* Ajusta el ancho del botón */
+    padding: 10px 0; /* Ajusta el padding para que sea más alto */
+    font-size: 16px; /* Aumenta el tamaño del texto */
+    border-radius: 8px;
+}
+
+
+
 
