--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -26,10 +26,10 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Cart</a>
+                      <a class="nav-link" href="{% url 'cart_index' %}">Cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Wish List</a>
@@ -47,7 +47,7 @@
               <!-- Elementos -->
                 <nav class="nav">
                     <a class="nav-link active" aria-current="page" href="#">Wish list</a>
-                    <a class="nav-link" href="#">Cart</a>
+                    <a class="nav-link" href="{% url 'cart_index' %}">Cart</a>
                     <a class="nav-link" href="#">Profile</a>
                 </nav>
             </div>
