--- a/pages/templates/vinyl/index.html
+++ b/pages/templates/vinyl/index.html
@@ -16,7 +16,7 @@
         <div class="search">
             <img class="image_option" src="https://images.vexels.com/media/users/3/161229/isolated/preview/4a771d881c01f2f219463384e56c89ef-ilustracion-de-patron-de-disco-de-vinilo.png" alt="">
             <br>
-            <a class="button_" href="">
+            <a class="button_" href="{% url 'vinyl_list' %}">
                 <button type="button" class="btn btn-info">Search a vinyl</button>
             </a>
         </div>
