--- a/pages/templates/vinyl/index.html
+++ b/pages/templates/vinyl/index.html
@@ -7,7 +7,7 @@
         <div class="create">
             <img class="image_option" id="image_1" src="https://img.lovepik.com/element/40131/7988.png_300.png" alt="">
             <br>
-            <a class="button_" href="">
+            <a class="button_" href="{% url 'vinyl_create' %}">
                 <button type="button" class="btn btn-info">Create my own vinyl</button>
             </a>
             
