--- a/pages/templates/registration/register.html
+++ b/pages/templates/registration/register.html
@@ -1,11 +1,31 @@
-{% extends "base.html" %}
+{%load static%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="{% static 'pages/register.css' %}" rel="stylesheet">
+    <title>{% block title%} Register {% endblock%} </title>
+</head>
+<body>
+    <div class="register-container">
+        <img src="../../static/image/Presentación_Diapositivas_Informe_Proyecto_Negocios_Orgánico_Marrón.png" alt="Logo RetroVibes" class="register-logo">
 
-{% block content %}
-<h2>Registrarse</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Registrarse</button>
-</form>
-<p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión</a></p>
-{% endblock %}
+        <h2 class="register-title">Registrarse</h2>
+
+        <form method="post" class="register-form">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="register-btn">Registrarse</button>
+        </form>
+
+        <p class="register-footer">
+            ¿Ya tienes una cuenta?
+            <a href="{% url 'login' %}">Inicia sesión</a>
+        </p>
+    </div>
+</body>
+</html>
+
+
