--- a/pages/templates/vinyl/list.html
+++ b/pages/templates/vinyl/list.html
@@ -1,5 +1,5 @@
-@extends('layouts.app')
 {% extends 'pages/base.html' %}
+{%load static%}
 {% block title %} Vinyls {% endblock %}
 {% block content %}
 <body class="vinyl-list-page">
