--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -1,5 +1,5 @@
-
-{% extends 'pages/base.html'%}
+{% extends 'pages/base.html' %}
+{%load static%}
 {% block title%} 'Home' {% endblock%}
 {% block content %} 
 
