--- a/pages/templates/vinyl/show.html
+++ b/pages/templates/vinyl/show.html
@@ -1,4 +1,5 @@
 {% extends 'pages/base.html' %}
+{%load static%}
 {% block title %} Vinyls {% endblock %}
 {% block content %}
 <div class="vinyl-card">
