--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -56,15 +56,17 @@
       {% endblock %} 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <footer class="bg-dark text-white mt-5 p-3">
+    <footer style="background-color: #915018;" class="text-white mt-5 p-3">
        <div class="container text-center">
-          <h5>🎧 Top 50 Global - Spotify</h5>
-          <iframe style="border-radius:12px" 
-            src="https://open.spotify.com/embed/playlist/37i9dQZEVXbMDoHDwVN2tF?utm_source=generator" 
-            width="100%" height="380" frameborder="0" allowfullscreen="" 
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-          </iframe>
+          <h2 style="color: white;">🎧Top 50🎧Global Spotify</h2>
+          <div style="background-color: #915018; padding: 10px; border-radius: 12px;"></div>
+             <iframe style="border-radius:12px" 
+                 src="https://open.spotify.com/embed/playlist/37i9dQZEVXbMDoHDwVN2tF?utm_source=generator" 
+                 width="100%" height="380" frameborder="0" allowfullscreen="" 
+                 allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+             </iframe>
        </div>
     </footer>
 </body>
 </html>
+
