--- a/pages/templates/registration/login.html
+++ b/pages/templates/registration/login.html
@@ -1,4 +1,5 @@
 {%load static%}
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,22 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'pages/register.css' %}" rel="stylesheet">
-    <title>{% block title%} Login {% endblock%} </title>
+    <title>{% block title %}{% trans "Login" %}{% endblock %}</title>
+
 </head>
 <body>
     <div class="login-container">
         <img src="../../static/image/Presentación_Diapositivas_Informe_Proyecto_Negocios_Orgánico_Marrón.png" alt="Logo RetroVibes" class="login-logo">
 
-        <h2 class="login-title">Iniciar sesión</h2>
+        <h2 class="login-title">{% trans "Iniciar sesión" %}</h2>
 
         <form method="post" class="login-form">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="login-btn">Entrar</button>
+            <button type="submit" class="login-btn">{% trans "Entrar" %}r</button>
         </form>
 
-        <p class="login-footer">¿No tienes una cuenta?
-            <a href="{% url 'register' %}">Regístrate aquí</a>
+        <p class="login-footer">{% trans "¿No tienes una cuenta?" %}
+            <a href="{% url 'register' %}">{% trans "Regístrate aquí" %}</a>
         </p>
     </div>
 </body>
