--- a/pages/templates/cart/index.html
+++ b/pages/templates/cart/index.html
@@ -5,6 +5,12 @@
 {% block title %}t{% trans "Cart" %} {% endblock %} 
 
 {% block content %}
+{% if messages %}
+     {% for message in messages %}
+         <div>
+         </div>
+     {% endfor %}
+{% endif %}
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-12">
