--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -25,7 +25,7 @@
 
   <a href="{% url 'index' %}" class="vinyl-btn">
     <div class="d-grid gap-2 col-6 mx-auto">
-      <button class="btn btn-primary" type="button">{% trans "Buy your own vinyl" %}</button>
+      <button class="btn btn-primary" type="button">{% trans "Compra tu Vinilo Original" %}</button>
     </div>
   </a>
 </body>
