--- a/pages/templates/vinyl/create.html
+++ b/pages/templates/vinyl/create.html
@@ -2,24 +2,24 @@
 {%load static%}
 {% load i18n %}
 
-{% block title %} {% trans "Create Vinyl" %} {% endblock %}
+{% block title %} {% trans "Crear vinilo" %} {% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>{% trans "Create a New Vinyl" %}</h1>
+    <h1>{% trans "Crea un vinilo nuevo" %}</h1>
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         
         <div class="mb-3">
-            <label for="id_name">{% trans "Name" %}</label>
+            <label for="id_name">{% trans "Nombre" %}</label>
             {{ form.name }}
         </div>
 
         <div class="mb-3">
             <label for="id_playlist">{% trans "Playlist" %}</label>
             <select class="form-select" aria-label="Default select example">
-                <option selected>{%trans "Open this select menu" %}</option>
+                <option selected>{%trans "Abre este menu" %}</option>
                 <option value="1">One</option>
                 <option value="2">Two</option>
                 <option value="3">Three</option>
@@ -28,29 +28,29 @@
         </div>
 
         <div class="mb-3">
-            <label for="id_size">{% trans "Size" %}</label>
+            <label for="id_size">{% trans "Tamaño" %}</label>
             {{ form.size }}
         </div>
 
         <div class="mb-3">
-            <label for="id_colour">{% trans "Colour" %}</label>
+            <label for="id_colour">{% trans "Color" %}</label>
             {{ form.colour }}
         </div>
 
         <div class="mb-3">
-            <label for="id_price">{% trans "Price:" %}</label>
+            <label for="id_price">{% trans "Precio:" %}</label>
             200COP
         </div>
 
         <div class="mb-3">
-            <label for="id_image">{% trans "Image" %}</label>
+            <label for="id_image">{% trans "Imagen" %}</label>
             <input class="form-control" type="file" id="formFile">
         </div>
 
-        <button type="submit" class="btn btn-primary">{% trans "Create Vinyl" %}</button>
+        <button type="submit" class="btn btn-primary">{% trans "Crear Vinilo" %}</button>
     </form>
 
     <br>
-    <a href="{% url 'vinyl_list' %}" class="btn btn-secondary">{% trans "Back to List" %}</a>
+    <a href="{% url 'vinyl_list' %}" class="btn btn-secondary">{% trans "Regresa a la lista" %}</a>
 </div>
 {% endblock %}
