--- a/pages/templates/vinyl/index.html
+++ b/pages/templates/vinyl/index.html
@@ -1,8 +1,9 @@
 {% extends 'pages/base.html'%}
 {%load static%}
-{% block title%} {% trans "Options" %} {% endblock%}
-{% block content %} 
 {% load i18n %}    
+{% block title%} {% trans "Opciones" %} {% endblock%}
+{% block content %} 
+
     
 <body class="index-page">
     <div class="vinyl-container">
@@ -14,7 +15,7 @@
                     </defs>
                     <text class="arc-text">
                         <textPath href="#arc1" startOffset="50%" text-anchor="middle">
-                            {% trans "Create my own vinyl" %}
+                            {% trans "Crear mi propio Vinilo" %}
                         </textPath>
                     </text>
                 </svg>
@@ -30,7 +31,7 @@
                     </defs>
                     <text class="arc-text">
                         <textPath href="#arc2" startOffset="50%" text-anchor="middle">
-                            {% trans "Search a vinyl" %}
+                            {% trans "Buscar un vinilo" %}
                         </textPath>
                     </text>
                 </svg>
