--- a/pages/templates/vinyl/list.html
+++ b/pages/templates/vinyl/list.html
@@ -1,7 +1,7 @@
 {% extends 'pages/base.html' %}
 {% load i18n %}
 {%load static%}
-{% block title %}  {% trans "Vinyls" %} {% endblock %}
+{% block title %}  {% trans "Vinilos" %} {% endblock %}
 {% block content %}
 <body class="vinyl-list-page">
 
