--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="{% static 'pages/app.css' %}" rel="stylesheet">
-    <title>{% block title %}{% trans "Online Store" %}{% endblock %}</title>
+    <title>{% block title %}{% trans "Tienda en Linea" %}{% endblock %}</title>
 </head>
 <body>
     <header>
@@ -30,12 +30,12 @@
                       <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'cart_index' %}">{% trans "Cart" %}</a>
+                      <a class="nav-link" href="{% url 'cart_index' %}">{% trans "Carrito" %}</a>
                     </li>
                   
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' %}">{% trans "Profile" %}</a>
+                        <a class="nav-link" href="{% url 'profile' %}">{% trans "Perfil" %}</a>
                     </li>
                   </ul>
                 </div>
